create: GetArticles API
